syntax = "proto3";

import "acs4.proto";
import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.Consensus.SingleConsensusContract";

service SingleConsensusContract {
    option (aelf.csharp_state) = "AElf.Contracts.Consensus.SingleConsensusContract.SingleConsensusState";
    option (aelf.base) = "acs4.proto";
    
    rpc Record (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
}